// tbclient.VideoInfo
syntax = "proto3";

message VideoInfo {
    string video_url = 2;
    uint32 video_duration = 3;
    uint32 video_width = 4;
    uint32 video_height = 5;
    string thumbnail_url = 6;
    int32 play_count = 10;
}
